# hivekit

./: .gitignore  Makefile  OWNERS  README.md  config.yaml  main.py  pyproject.toml  start.sh
.github/workflows/: python-ci.yaml
src/cli/: completers.py  config.py  experiment.py  http_client.py  main.py
src/cli/auth/: auth_utils.py  credential_store.py  login_page.py  oidc_flow.py  session_manager.py
src/cli/utils/: config_paths.py  logger.py  url_utils.py
tests/: test_completers.py  test_experiment.py  test_http_client.py  test_logout.py
tests/auth/: test_auth_utils.py  test_credential_store.py  test_oidc_flow.py  test_session_manager.py
tests/integration/: test_keyring_credential_store.py
tests/utils/: test_time.py  test_url_utils.py
