[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hivekit"
version = "0.0.0"
description = "Toolkits for using hive agents, including CLI and SDK."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "PyYAML>=5.1",
    "pydantic>=1.8.2",
    "gitpython>=3.1.24",
    "rich>=12.5.1",
    "kubernetes>=33.1.0",
    "portforward>=0.3.0",
    "argcomplete>=3.0.0",
    "requests>=2.28.0",
    "authlib>=1.2.0",
    "keyring>=25.0.0",
    "py-machineid>=0.6.0",
    "cryptography>=42.0.0",
]

[dependency-groups]
dev = [
  {include-group = "test"},
  {include-group = "lint"}
]

test = [
  "pytest>=6.2.4",
  "flask==2.3.3",
  "requests",
  "psutil",
]
lint = [
  "ruff>=0.12",
]

[project.scripts]
hive = "cli.main:main"

[tool.ruff]
line-length = 100
exclude = ["libs"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"cli" = ["libs/**/*", "auth/*.svg"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
